package com.example.danie.flexicuapplication.GUI;

import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;

import com.example.danie.flexicuapplication.R;

public class FiltersRentOut extends AppCompatActivity
    {

    @Override
    protected void onCreate(Bundle savedInstanceState)
        {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_rent_out_filters);
        }
    }
