@startuml

title __GUI's Class Diagram__\n

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class CreateEmployee {
          ~ buttonNextPage : Button
          ~ editTextName : TextView
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class CreateEmployeeDescription {
          ~ buttonNextPage : Button
          ~ textViewTitle : TextView
          ~ editTextDescription : EditText
          ~ name : String
          ~ year : String
          ~ erhverv : String
          ~ postcode : String
          ~ beskrivelse : String
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class CreateEmployeeFinish {
          ~ textViewTitle : TextView
          ~ textViewName : TextView
          ~ textViewYear : TextView
          ~ textViewErhverv : TextView
          ~ textViewPostcode : TextView
          ~ textViewDescription : TextView
          ~ buttonNextPage : Button
          ~ name : String
          ~ year : String
          ~ erhverv : String
          ~ postcode : String
          ~ beskrivelse : String
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class CreateEmployeeImage {
          ~ buttonNextPage : Button
          ~ textViewTitle : TextView
          ~ textViewImage : TextView
          ~ name : String
          ~ year : String
          ~ erhverv : String
          ~ postcode : String
          ~ beskrivelse : String
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class CreateEmployeeProfession {
          ~ buttonNextPage : Button
          ~ textViewTitle : TextView
          ~ editTextErhverv : EditText
          ~ name : String
          ~ year : String
          ~ erhverv : String
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class CreateEmployeeYear {
          ~ buttonNextPage : Button
          ~ textViewTitle : TextView
          ~ editTextYear : EditText
          ~ name : String
          ~ year : String
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class CreateEmployeeZipcode {
          ~ nextPage : Button
          ~ titel : TextView
          ~ name : String
          ~ year : String
          ~ erhverv : String
          ~ zipcode : String
          ~ editTextZipcode : EditText
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class FiltersRentOut {
          # onCreate()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class Login {
          ~ textViewLoginLater : TextView
          ~ editTextUsername : EditText
          ~ editTextPassword : EditText
          ~ buttonLogin : Button
          ~ LoginLayout : ConstraintLayout
          - mAuth : FirebaseAuth
          # onCreate()
          + onClick()
          + loginSuccess()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class MyRentIns {
          ~ id : int
          ~ scroller : LinearLayout
          ~ mainLayout : ConstraintLayout
          ~ mainText_textView : TextView
          ~ textViewLejeperiodeStart : TextView
          ~ textViewLejeperiodeSlut : TextView
          ~ textViewLejer : TextView
          ~ textViewErhverv : TextView
          ~ textViewLokation : TextView
          # onCreate()
          + createNew()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class MyRentOuts {
          ~ firstEmployee : ConstraintLayout
          ~ rentPeriodStart : TextView
          ~ rentPeriodEnd : TextView
          ~ tenant : TextView
          ~ profession : TextView
          ~ location : TextView
          ~ mainLayout : ConstraintLayout
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class Navigation {
          ~ buttonMineIndlejninger : Button
          ~ buttonMineUdlejninger : Button
          ~ buttonIndlej : Button
          ~ buttonUdlej : Button
          # onCreate()
          + onClick()
      }
    }
  }
  

  package com.example.danie.flexicuapplication {
    package com.example.danie.flexicuapplication.GUI {
      class RentOut {
          - mContext : Context
          - constLayout : ConstraintLayout
          - constCardLayout : ConstraintLayout
          ~ id : int
          # onCreate()
          + setinfo()
          + addTextView()
          + getLinearLayout()
      }
    }
  }
  

  CreateEmployee -up-|> OnClickListener
  CreateEmployee -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  CreateEmployeeDescription -up-|> OnClickListener
  CreateEmployeeDescription -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  CreateEmployeeFinish -up-|> OnClickListener
  CreateEmployeeFinish -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  CreateEmployeeImage -up-|> OnClickListener
  CreateEmployeeImage -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  CreateEmployeeProfession -up-|> OnClickListener
  CreateEmployeeProfession -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  CreateEmployeeYear -up-|> OnClickListener
  CreateEmployeeYear -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  CreateEmployeeZipcode -up-|> OnClickListener
  CreateEmployeeZipcode -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  FiltersRentOut -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  Login -up-|> OnClickListener
  Login -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  MyRentIns -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  MyRentOuts -up-|> OnClickListener
  MyRentOuts -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  Navigation -up-|> OnClickListener
  Navigation -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  RentOut -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
